package quorum.pb;
syntax = "proto3";

message Any {
  string typeUrl = 1;
  bytes value = 2;
}

message _Object {
    string id = 1;
    string type = 2;
    repeated _Object attributedTo = 4;
    string content = 6;
    string name = 8;
    repeated Image image = 12;
    Reply inreplyto = 13;
}

enum TrxType {
  POST               = 0;
  SCHEMA             = 2;
  PRODUCER           = 3;
  ANNOUNCE           = 4;
  REQ_BLOCK_FORWARD  = 5;
  REQ_BLOCK_BACKWARD = 6;
  REQ_BLOCK_RESP     = 7;
  BLOCK_SYNCED       = 8;
  BLOCK_PRODUCED     = 9;
  USER               = 10;
  ASK_PEERID         = 11;
  ASK_PEERID_RESP    = 12;
  CHAIN_CONFIG       = 13;
  APP_CONFIG         = 14;
}

enum TrxStroageType {
    CHAIN    = 0;
    CACHE = 1;
}

message Trx {
  string  TrxId        = 1;
  TrxType Type         = 2;    
  string  GroupId      = 3;
  bytes   Data         = 4; 
  int64   TimeStamp    = 5;
  string  Version      = 6;
  int64   Expired      = 7;
  int64   ResendCount  = 8;
  int64   Nonce        = 9;
  string  SenderPubkey = 10;  
  bytes   SenderSign   = 11;
  TrxStroageType StorageType = 12;
}

message Image {
  string id = 1;
  string name = 2;
  string mediaType= 3;
  bytes content = 4;
  string url = 5;
}

message Reply {
  string trxid = 1;
  string  groupid  = 2;
}